--- a/src/app/core/components/pages/mypage/mypage.component.html
+++ b/src/app/core/components/pages/mypage/mypage.component.html
@@ -9,47 +9,27 @@
   <h2>Seccion de productos</h2>
 
   <div class="grid grid-ngrouter ng-star-inserted">
-
-
-    <div class="col-12 md:col-4 ng-star-inserted">
-      <div class="card m-3 border-1 surface-border">
-        <div class="flex flex-wrap gap-2 align-items-center justify-content-between mb-2">
-          <div class="flex align-items-center"><i class="pi pi-tag mr-2"></i><span
-              class="font-semibold">Accessories</span></div><span class="product-badge status-instock">INSTOCK</span>
-        </div>
-        <div class="flex flex-column align-items-center text-center mb-3"><img class="w-9 shadow-2 my-3 mx-0"
-            src="assets/demo/images/product/bamboo-watch.jpg" alt="Bamboo Watch">
-          <div class="text-2xl font-bold">Bamboo Watch</div>
-          <div class="mb-3">Product Description</div><p-rating class="p-element ng-untouched ng-pristine ng-valid">
-            <div class="p-rating p-readonly" data-pc-name="rating" data-pc-section="root"><!---->
-              <div class="p-rating-item ng-star-inserted p-rating-item-active"><span class="p-hidden-accessible"
-                  data-p-hidden-accessible="true"><input type="radio" value="0" name="pn_id_46" readonly=""
-                    aria-label="1 star"></span><!----><!---->
-
-              </div>
-              <div class="p-rating-item ng-star-inserted p-rating-item-active"><span class="p-hidden-accessible"
-                  data-p-hidden-accessible="true"><input type="radio" value="0" name="pn_id_46" readonly=""
-                    aria-label="2 stars"></span><!----><!---->
-
-              </div>
-              <div class="p-rating-item ng-star-inserted p-rating-item-active"><span class="p-hidden-accessible"
-                  data-p-hidden-accessible="true"><input type="radio" value="0" name="pn_id_46" readonly=""
-                    aria-label="3 stars"></span><!----><!---->
-
-              </div>
-              <div class="p-rating-item ng-star-inserted p-rating-item-active"><span class="p-hidden-accessible"
-                  data-p-hidden-accessible="true"><input type="radio" value="0" name="pn_id_46" readonly=""
-                    aria-label="4 stars"></span><!----><!---->
-              </div>
-              <div class="p-rating-item ng-star-inserted p-rating-item-active"><span class="p-hidden-accessible"
-                  data-p-hidden-accessible="true"><input type="radio" value="0" name="pn_id_46" readonly=""
-                    aria-label="5 stars"></span><!----><!---->
-              </div>
-            </div>
-          </p-rating>
+<!---->
+<div class="grid grid-ngrouter">
+  <div class="col-12 md:col-4 lg:col-4" *ngFor="let producto of listaProductos">
+    <div class="card m-3 border-1 surface-border">
+      <div class="flex flex-wrap gap-2 align-items-center justify-content-between mb-2">
+        <div class="flex align-items-center">
+          <!-- Información adicional -->
         </div>
       </div>
+      <div class="flex flex-column align-items-center text-center mb-3">
+        <img class="w-9 shadow-2 my-3 mx-0" src="{{ producto.imgProductPath }}" alt="product">
+        <div class="text-2xl font-bold">{{ producto.comercialName }}</div>
+        <p>{{ producto.description }}</p>
+        <div class="mb-3">stock: <br>{{ producto.stock }}</div>
+      </div>
     </div>
+  </div>
+</div>
+<!---->
+
+<!---->
 
 
   </div>
