--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -18,4 +18,10 @@
             <span>Profile</span>
         </button>
     </div>
+
+    <!-- Botón para abrir el diálogo del formulario y el mapa -->
+    <button class="p-link layout-topbar-button" (click)="openPostalMapDialog()">
+        <i class="pi pi-map"></i>
+        <span>Mapa</span>
+    </button>
 </div>
