--- a/src/app/core/components/update-category/update-category.component.html
+++ b/src/app/core/components/update-category/update-category.component.html
@@ -1,1 +1,19 @@
-<p>update-category works!</p>
+<h1>Update Category</h1>
+
+<form (ngSubmit)="updateCategory()">
+
+  <div>
+    <label for="name">Nombre:</label>
+    <input
+      id="name"
+      type="text"
+      [(ngModel)]="category.name"
+      name="name"
+      required
+    />
+  </div>
+  <div>
+    <button type="submit">Update Category</button>
+    <button type="button" (click)="cancel()">Cancel</button>
+  </div>
+</form>
