--- a/src/app/core/components/postal-map/postal-map.component.css
+++ b/src/app/core/components/postal-map/postal-map.component.css
@@ -2,3 +2,19 @@
   height: 400px;
   width: 100%;
 }
+
+h5{
+  text-align: center;
+}
+
+.tittle{
+    color: #12823b;
+      font-size: 1.5rem;
+      text-align: center;
+}
+
+p{
+ 
+  font-size: 2rem;
+  text-align: center;
+}
