--- a/src/app/core/components/add-category/add-category.component.html
+++ b/src/app/core/components/add-category/add-category.component.html
@@ -5,5 +5,6 @@
     <input id="name" formControlName="name" />
   </div>
   <button type="submit" [disabled]="form.invalid">Register category</button>
+  <!-- <button pButton label="Submit" [disabled]="form.invalid"></button> -->
   <button type="button" (click)="cancel()">Cancel</button>
 </form>
