--- a/src/app/core/components/add-coupon/add-coupon.component.css
+++ b/src/app/core/components/add-coupon/add-coupon.component.css
@@ -1,16 +1,6 @@
-/**
- * Copyright 2024 batol
- * 
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- * 
- *     https://www.apache.org/licenses/LICENSE-2.0
- * 
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
+.bg-gym {
+    background-image: url('https://img.freepik.com/foto-gratis/equipo-gimnasio-3d_23-2151114137.jpg'); /* Cambia esto por la URL de tu imagen */
+    background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
+    background-position: center; /* Centra la imagen */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+  }
