--- a/src/app/core/components/add-coupon/add-coupon.component.html
+++ b/src/app/core/components/add-coupon/add-coupon.component.html
@@ -1,46 +1,120 @@
-<h1>Register a Coupon</h1>
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <div>
-    <label for="codeDiscount">Code Discount:</label>
-    <input id="codeDiscount" formControlName="codeDiscount" />
-  </div>
+<div class="flex flex-column align-items-center justify-content-center min-h-screen bg-gym">
+  <h1
+    style="
+      -webkit-text-stroke: 2px black;
+      color: rgb(180, 222, 14);
+      font-weight: bold;
+      text-align: center;
+    "
+  >
+    Register a Coupon
+  </h1>
 
-  <div>
-    <label for="description">Description:</label>
-    <input id="description" formControlName="description" />
-  </div>
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" class="w-75 card p-4">
+    <!-- Code Discount -->
+    <div class="p-fluid">
+      <label for="codeDiscount" class="col-12 mb-2 md:col-2 md:mb-0">Code Discount:</label>
+      <input
+        pInputText
+        id="codeDiscount"
+        formControlName="codeDiscount"
+        class="p-inputtext p-component p-element"
+      />
+    </div>
 
-  <div>
-    <label for="initDate">Init Date:</label>
-    <input id="initDate" type="date" formControlName="initDate" />
-  </div>
+    <!-- Description -->
+    <div class="p-fluid">
+      <label for="description" class="col-12 mb-2 md:col-2 md:mb-0">Description:</label>
+      <input
+        pInputText
+        id="description"
+        formControlName="description"
+        class="p-inputtext p-component p-element"
+      />
+    </div>
 
-  <div>
-    <label for="expirationDate">Expiration Date:</label>
-    <input id="expirationDate" type="date" formControlName="expirationDate" />
-  </div>
-  <div>
-    <label for="status">Status:</label>
-    <input id="status" type="text" formControlName="status" />
-  </div>
-  <div>
-    <label for="discountPercentage">Discount Percentage:</label>
-    <input
-      id="discountPercentage"
-      type="number"
-      formControlName="discountPercentage"
-    />
-  </div>
+    <!-- Init Date -->
+    <div class="p-fluid">
+      <label for="initDate" class="col-12 mb-2 md:col-2 md:mb-0">Init Date:</label>
+      <input
+        pInputText
+        id="initDate"
+        type="date"
+        formControlName="initDate"
+        class="p-inputtext p-component p-element"
+      />
+    </div>
 
-  <div>
-    <label for="idCategory">Category ID:</label>
-    <input id="idCategory" formControlName="idCategory" />
+    <!-- Expiration Date -->
+    <div class="p-fluid">
+      <label for="expirationDate" class="col-12 mb-2 md:col-2 md:mb-0">Expiration Date:</label>
+      <input
+        pInputText
+        id="expirationDate"
+        type="date"
+        formControlName="expirationDate"
+        class="p-inputtext p-component p-element"
+      />
+    </div>
+
+    <!-- Status -->
+    <div class="p-fluid">
+      <label for="status" class="col-12 mb-2 md:col-2 md:mb-0">Status:</label>
+      <input
+        pInputText
+        id="status"
+        type="text"
+        formControlName="status"
+        class="p-inputtext p-component p-element"
+      />
+    </div>
+
+    <!-- Discount Percentage -->
+    <div class="p-fluid">
+      <label for="discountPercentage" class="col-12 mb-2 md:col-2 md:mb-0">Discount Percentage:</label>
+      <input
+        pInputText
+        id="discountPercentage"
+        type="number"
+        formControlName="discountPercentage"
+        class="p-inputtext p-component p-element"
+      />
+    </div>
+
+    <!-- Category ID -->
+    <div class="p-fluid">
+      <label for="idCategory" class="col-12 mb-2 md:col-2 md:mb-0">Category ID:</label>
+      <input
+        pInputText
+        id="idCategory"
+        formControlName="idCategory"
+        class="p-inputtext p-component p-element"
+      />
+    </div>
+
+    <!-- Buttons -->
+    <div class="flex gap-3 mt-3 justify-content-center">
+      <button
+        pButton
+        pRipple
+        type="submit"
+        [disabled]="form.invalid"
+        label="Register Coupon"
+        class="p-button-rounded p-button-warning"
+      ></button>
+      <button
+        pButton
+        pRipple
+        type="button"
+        label="Cancel"
+        class="p-button-rounded p-button-danger"
+        (click)="cancel()"
+      ></button>
+    </div>
+  </form>
+
+  <!-- Message -->
+  <div *ngIf="message" class="mt-3">
+    <p>{{ message }}</p>
   </div>
-
-  <button type="submit" [disabled]="form.invalid">Register Coupon</button>
-  <button type="button" (click)="cancel()">Cancel</button>
-</form>
-
-<div *ngIf="message">
-  <p>{{ message }}</p>
 </div>
