--- a/src/app/core/components/add-nurient/add-nurient.component.html
+++ b/src/app/core/components/add-nurient/add-nurient.component.html
@@ -1,9 +1,45 @@
-<h1>Register a Nutrient</h1>
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <div>
-    <label for="name">Nombre:</label>
-    <input id="name" formControlName="name" />
-  </div>
-  <button type="submit" [disabled]="form.invalid">Register nutrient</button>
-  <button type="button" (click)="cancel()">Cancel</button>
-</form>
+<div class="flex flex-column align-items-center justify-content-center min-h-screen bg-gym">
+  <h1
+    style="
+      -webkit-text-stroke: 2px black;
+      color: rgb(180, 222, 14);
+      font-weight: bold;
+      text-align: center;
+    "
+  >
+    Register a Nutrient
+  </h1>
+
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" class="w-75 card p-4">
+    <!-- Name -->
+    <div class="p-fluid">
+      <label for="name" class="col-12 mb-2 md:col-2 md:mb-0">Nombre:</label>
+      <input
+        pInputText
+        id="name"
+        formControlName="name"
+        class="p-inputtext p-component p-element"
+      />
+    </div>
+
+    <!-- Buttons -->
+    <div class="flex gap-3 mt-3 justify-content-center">
+      <button
+        pButton
+        pRipple
+        type="submit"
+        [disabled]="form.invalid"
+        label="Register Nutrient"
+        class="p-button-rounded p-button-warning"
+      ></button>
+      <button
+        pButton
+        pRipple
+        type="button"
+        label="Cancel"
+        class="p-button-rounded p-button-danger"
+        (click)="cancel()"
+      ></button>
+    </div>
+  </form>
+</div>
