--- a/src/app/core/components/update-category/update-category.component.html
+++ b/src/app/core/components/update-category/update-category.component.html
@@ -1,19 +1,24 @@
-<h1>Update Category</h1>
+<div class="flex flex-column align-items-center justify-content-center min-h-screen bg-gym">
+  <h1 style="
+  -webkit-text-stroke: 2px black; 
+  color: rgb(180, 222, 14); 
+  font-weight: bold;
+  text-align: center;">
+    Update Category
+  </h1>
 
-<form (ngSubmit)="updateCategory()">
 
-  <div>
-    <label for="name">Nombre:</label>
-    <input
-      id="name"
-      type="text"
-      [(ngModel)]="category.name"
-      name="name"
-      required
-    />
-  </div>
-  <div>
-    <button type="submit">Update Category</button>
-    <button type="button" (click)="cancel()">Cancel</button>
-  </div>
-</form>
+  <form (ngSubmit)="updateCategory()" class="w-75 card p-4">
+    <div class="p-fluid">
+      <label for="name" class="col-12 mb-2 md:col-2 md:mb-0">Nombre:</label>
+      <input pInputText id="name" type="text" [(ngModel)]="category.name" name="name"
+        class="p-inputtext p-component p-element" required />
+    </div>
+
+    <div class="flex gap-3 mt-3 justify-content-center">
+      <button pButton pRipple type="submit" label="Actualizar" class="p-button-rounded p-button-warning"></button>
+      <button pButton pRipple type="button" label="Cancelar" class="p-button-rounded p-button-danger"
+        (click)="cancel()"></button>
+    </div>
+  </form>
+</div>
