--- a/src/app/core/components/update-nutrient/update-nutrient.component.html
+++ b/src/app/core/components/update-nutrient/update-nutrient.component.html
@@ -1,20 +1,47 @@
-<h1>Update Nutrient</h1>
+<div class="flex flex-column align-items-center justify-content-center min-h-screen bg-gym">
+  <h1
+    style="
+      -webkit-text-stroke: 2px black;
+      color: rgb(180, 222, 14);
+      font-weight: bold;
+      text-align: center;
+    "
+  >
+    Update Nutrient
+  </h1>
 
-<form (ngSubmit)="updateNutrient()">
+  <form (ngSubmit)="updateNutrient()" class="w-75 card p-4">
+    <!-- Name -->
+    <div class="p-fluid">
+      <label for="name" class="col-12 mb-2 md:col-2 md:mb-0">Nombre:</label>
+      <input
+        pInputText
+        id="name"
+        type="text"
+        [(ngModel)]="nutrient.name"
+        name="name"
+        class="p-inputtext p-component p-element"
+        required
+      />
+    </div>
 
-  <!-- Description -->
-  <div>
-    <label for="name">Nombre:</label>
-    <input
-      id="name"
-      type="text"
-      [(ngModel)]="nutrient.name"
-      name="name"
-      required
-    />
-  </div>
-  <div>
-    <button type="submit">Update Nutrient</button>
-    <button type="button" (click)="cancel()">Cancel</button>
-  </div>
-</form>
+    <!-- Buttons -->
+    <div class="flex gap-3 mt-3 justify-content-center">
+      <button
+        pButton
+        pRipple
+        type="submit"
+        label="Update Nutrient"
+        class="p-button-rounded p-button-warning"
+      ></button>
+      <button
+        pButton
+        pRipple
+        type="button"
+        label="Cancel"
+        class="p-button-rounded p-button-danger"
+        (click)="cancel()"
+      ></button>
+    </div>
+  </form>
+</div>
